fix width of market

--- a/client/index_deploy.html
+++ b/client/index_deploy.html
@@ -12,9 +12,8 @@
     })(window,document,'script','dataLayer','GTM-W27P4W3');</script>
     <!-- End Google Tag Manager -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="game-engine-origin" content="http://www.isogenicengine.com">
     <meta http-equiv="X-UA-Compatible" content="IE=9">
@@ -110,12 +109,17 @@
                             <img class="marketCashIcon" src="assets/images/ui/Banknotes.png">
                             0
                         </td>
-                        <td class="unlock" role="button">Unlock
-                            <img src="assets/images/ui/Banknotes.png"/>
-                            <span class="unlockprice"> </span>
+                        <td width="120">
+                            <span class="unlock" role="button">
+                                Unlock
+                                <img src="assets/images/ui/Banknotes.png"/>
+                                <span class="unlockprice"> </span>
+                            </span>
                         </td>
-                        <td class="marketItemInfo">
-                            <img class="marketItemInfoIcon" src="/assets/images/ui/Info-50.png">
+                        <td width="20">
+                            <span class="marketItemInfo">
+                                <img class="marketItemInfoIcon" src="/assets/images/ui/Info-50.png">
+                            </span>
                         </td>
                     </tr>
                 </table>
