--- a/client/index_deploy.html
+++ b/client/index_deploy.html
@@ -75,6 +75,8 @@
             <img src="assets/images/ui/FourDirections52.png"/>
             <span class="toolbarNotification" id="endMove">End Move</span>
         </li>
+        <li class="allPointerEvents" id="zoomInButton" title="Zoom in"><img src="assets/images/ui/Zoom-In.png"/></li>
+        <li class="allPointerEvents" id="zoomOutButton" title="Zoom out"><img src="assets/images/ui/Zoom-Out.png"/></li>
         <li class="allPointerEvents" id="saveButton" title="Login to Save">
             <img src="assets/images/ui/save.png"/>
             <span class="toolbarNotification" id="Loggedin">Auto Saved</span>
