--- a/client/index_deploy.html
+++ b/client/index_deploy.html
@@ -220,7 +220,7 @@
         <button id="buyConfirmYes"><span id="buyConfirmPrize"></span></button>
     </div>
     <div id="messageDialog" title="Message from Game" style="display:none">
-        <p id="messageDialogMessage"></p>
+        <div id="messageDialogMessage"></div>
         <button id="messageDialogOK">OK</button>
     </div>
     <div id="feedBackDialog" title="Send Feedback" style="display:none;">
