title and button of loading updated

--- a/client/index_deploy.html
+++ b/client/index_deploy.html
@@ -40,11 +40,11 @@
                   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <div id="villageTitleScreen">
-    <button id="titleScreenPlay" class="titleScreenButton">Play</button>
-    <button id="titleScreenAbout" class="titleScreenButton">About</button>
+    <img id="titleScreenPlay" class="titleScreenButton" src="assets/images/ui/play_button.png">
+    <img id="titleScreenAbout" class="titleScreenButton" src="assets/images/ui/about_button.png">
 </div>
 <ul id="loadingContainer" class="igeLoading loadingFloat">
-    <li class="loadingTitle">Village Makeover</li>
+    <li><img class="loadingTitle" src="assets/images/ui/title.png"></li>
     <li>
         <div class="loadingLogo">
             <div class="loadingCircle"></div>
