Take Farmvill as example to reorder the buttons

--- a/client/index_deploy.html
+++ b/client/index_deploy.html
@@ -66,13 +66,6 @@
                                                                                               id="waterbarProgress"></span></li>
         <li class="allPointerEvents" id="fullscreenIcon" title="Toggle Fullscreen Mode"><img src="assets/images/ui/Expand_2.png"/><img src="assets/images/ui/Collapse_2.png" style="display:none;"></li>
         <li class="allPointerEvents" id="volume" title="Toggle Sound"><img src="assets/images/ui/Speaker-48.png"/><img src="/client/assets/images/ui/Mute-48.png" style="display:none;"/></li>
-        <li class="allPointerEvents" id="marketButton" title="Buy New Items"><img src="assets/images/ui/Shop.png"/></li>
-
-        <li class="allPointerEvents" id="goalButton" title="Current Goals">
-            <img src="assets/images/ui/star.png"/>
-            <span class="toolbarNotification" id="newGoalNotification">New Goal!</span>
-            <span class="toolbarNotification" id="goalCompleteNotification">Goal Complete!</span>
-        </li>
         <li class="allPointerEvents" id="moveButton" title="Move Items">
             <img src="assets/images/ui/FourDirections52.png"/>
             <span class="toolbarNotification" id="endMove">End Move</span>
@@ -87,6 +80,14 @@
             <img src="assets/images/ui/Menu.png"/>
         </li>
     </ul>
+    <div class="allPointerEvents" id="goalButton" title="current Goals">
+        <img src="assets/images/ui/star.png"/>
+        <span class="toolbarNotification" id="newGoalNotification">New Goal!</span>
+        <span class="toolbarNotification" id="goalCompleteNotification">Goal Complete!</span>
+    </div>
+    <div class="allPointerEvents" id="marketButton" title="Buy New Items">
+        <img src="assets/images/ui/Shop.png"/>
+    </div>
     <span id="notificationMessage"></span>
     <div id="villageTitle"></div>
     <div id="o-wrapper" class="o-wrapper"></div>
