--- a/client/index_deploy.html
+++ b/client/index_deploy.html
@@ -65,15 +65,17 @@
         <li class="allPointerEvents" id="waterbar" title="Buy Water"><img src="assets/images/ui/Water-48.png"/><span class="waterbarProgress"
                                                                                               id="waterbarProgress"></span></li>
         <li class="allPointerEvents" id="fullscreenIcon" title="Toggle Fullscreen Mode"><img src="assets/images/ui/Expand_2.png"/><img src="assets/images/ui/Collapse_2.png" style="display:none;"></li>
-        <li class="allPointerEvents" id="volume" title="Toggle Sound"><img src="assets/images/ui/Speaker-48.png"/><img src="/client/assets/images/ui/Mute-48.png" style="display:none;"/></li>
+        <li class="allPointerEvents" id="volume" title="Toggle Sound"><img src="assets/images/ui/Speaker-48.png"/><img src="assets/images/ui/Mute-48.png" style="display:none;"/></li>
         <li class="allPointerEvents" id="moveButton" title="Move Items">
             <img src="assets/images/ui/FourDirections52.png"/>
             <span class="toolbarNotification" id="endMove">End Move</span>
+            <span id="pointer"></span>
         </li>
         <li class="allPointerEvents" id="zoomInButton" title="Zoom in"><img src="assets/images/ui/Zoom-In.png"/></li>
         <li class="allPointerEvents" id="zoomOutButton" title="Zoom out"><img src="assets/images/ui/Zoom-Out.png"/></li>
         <li class="allPointerEvents" id="saveButton" title="Login to Save">
             <img src="assets/images/ui/save.png"/>
+            <span class="toolbarNotification" id="NotLoggedin">Click to save</span>
             <span class="toolbarNotification" id="Loggedin">Auto Saved</span>
         </li>
         <li class="allPointerEvents" id="dropDownIcon" title="Player Menu">
@@ -86,6 +88,9 @@
         <span class="toolbarNotification" id="goalCompleteNotification">Goal Complete!</span>
     </div>
     <div class="allPointerEvents" id="marketButton" title="Buy New Items">
+        <span id="tutorialArrowSpan" style="displayment:hide">
+            <img id="tutorialArrowImage" src="./assets/images/ui/actionIconSelect.png">
+        </span>
         <img src="assets/images/ui/Shop.png"/>
     </div>
     <span id="notificationMessage"></span>
