--- a/client/index_deploy.html
+++ b/client/index_deploy.html
@@ -69,7 +69,7 @@
         <li class="allPointerEvents" id="moveButton" title="Move Items">
             <img class="topToolImg" src="assets/images/ui/FourDirections52.png"/>
             <span class="toolbarNotification" id="endMove">End Move</span>
-            <span id="topArrow" style="displayment:hide">
+            <span id="topArrow">
                 <img id="arrowUp" src="./assets/images/ui/actionIconSelect.png">
             </span>
         </li>
@@ -90,7 +90,7 @@
         <span class="toolbarNotification" id="goalCompleteNotification">Goal Complete!</span>
     </div>
     <div class="allPointerEvents" id="marketButton" title="Buy New Items">
-        <span id="marketArrow" style="displayment:hide">
+        <span id="marketArrow">
             <img id="arrowDown" src="./assets/images/ui/actionIconSelect.png">
         </span>
         <img src="assets/images/ui/Shop.png"/>
