--- a/client/index_deploy.html
+++ b/client/index_deploy.html
@@ -16,8 +16,12 @@
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="game-engine-origin" content="http://www.isogenicengine.com">
-    <meta http-equiv="X-UA-Compatible" content="IE=9">
-    <title>Village Makeover</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=9"/>
+    <meta property="og:url" content="www.villagethegame.com"/>
+    <meta property="og:title" content="Village The Game"/>
+    <meta property="og:discription" content="A simulator on how we can help others setting up their own village"/>
+    <meta property="og:img" content="assets/images/backgrounds/villagetitlescreen.png"/>
+    <title>Village The Game</title>
     <!-- STYLES -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.0/themes/smoothness/jquery-ui.css">
