change picture for fb

--- a/client/index_deploy.html
+++ b/client/index_deploy.html
@@ -17,10 +17,12 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="game-engine-origin" content="http://www.isogenicengine.com">
     <meta http-equiv="X-UA-Compatible" content="IE=9"/>
-    <meta property="og:url" content="www.villagethegame.com"/>
-    <meta property="og:title" content="Village The Game"/>
-    <meta property="og:discription" content="A simulator on how we can help others setting up their own village"/>
-    <meta property="og:img" content="assets/images/backgrounds/villagetitlescreen.png"/>
+    <meta property="og:url" content="https://villagegamedev.appspot.com"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Village The Game development"/>
+    <meta property="og:description" content="A simulator on how we can help others setting up their own village"/>
+    <meta property="fb:app_id" content="1-11"/>
+    <meta property="og:image" content='https://villagegamedev.appspot.com/assets/images/backgrounds/FullVillage.webp'/>
     <title>Village The Game</title>
     <!-- STYLES -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
