--- a/client/index_deploy.html
+++ b/client/index_deploy.html
@@ -22,7 +22,7 @@
     <meta property="og:title" content="Village The Game development"/>
     <meta property="og:description" content="A simulator on how we can help others setting up their own village"/>
     <meta property="fb:app_id" content="1-11"/>
-    <meta property="og:image" content='https://villagegamedev.appspot.com/assets/images/backgrounds/FullVillage.webp'/>
+    <meta property="og:image" content="https://villagegamedev.appspot.com/assets/images/backgrounds/FullVillage.webp"/>
     <title>Village The Game</title>
     <!-- STYLES -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
